<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="SimpleWeather">

        <Preference
            android:key="version"
            android:title="版本"
            />
        <Preference
            android:key="update"
            android:summary="@string/this_is_new_version"
            android:title="检查更新" />
    </PreferenceCategory>

    <PreferenceCategory android:title="About More">

        <Preference
            android:key="weather_data"
            android:summary="数据来源和风天气网（版权所有和风天气）"
            android:title="天气数据" />
        <Preference
            android:key="location"
            android:summary="百度locSDK_6.23。ps：程序只在第一次启动时才用到定位，暂时没有在其它地方使用到定位的功能。"
            android:title="定位" />
        <Preference
            android:key="pic"
            android:summary="图片资源来自互联网，如有侵权，请尽快联系我删除！！！"
            android:title="图片" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Author">
        <Preference
            android:key="weibo"
            android:title="微博"
            android:summary="\@Koterwong">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="dependencies"
        >
        <Preference
            android:key="dependencies"
            android:summary="@string/dependencies"
            android:title="@string/thx" />
    </PreferenceCategory>

</PreferenceScreen>